--- a/barber/src/main/resources/log4j.properties
+++ b/barber/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, file, stdout, ReportAppender
+log4j.rootLogger=INFO, file, stdout
 
 log4j.logger.com.proxy=INFO, file
 log4j.logger.com.nativeapp.runner=INFO,file
