--- a/barber/pom.xml
+++ b/barber/pom.xml
@@ -1,79 +1,45 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.epam.hibern</groupId>
-  <artifactId>barber</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>barber</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <groupId>org.springframework.samples</groupId>
+  <artifactId>SpringJDBCTemplate</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   
-<!--   <build> -->
-<!--         <plugins> -->
-<!--             <plugin> -->
-<!--                 <groupId>org.apache.maven.plugins</groupId> -->
-<!--                 <artifactId>maven-compiler-plugin</artifactId> -->
-<!--                 <version>2.3.2</version> -->
-<!--                 <configuration> -->
-<!--                     <source>1.7</source> -->
-<!--                     <target>1.7</target> -->
-<!--                 </configuration> -->
-<!--             </plugin> -->
-<!--             </plugins> -->
-<!--             </build> -->
+  <properties>
 
-  <dependencies>
-    <dependency>
+		<!-- Generic properties -->
+		<java.version>1.6</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- Spring -->
+		<spring-framework.version>4.0.6.RELEASE</spring-framework.version>
+
+	</properties>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.0.6.RELEASE</version>
+		</dependency>
+
+	    <dependency>
+	        <groupId>mysql</groupId>
+	        <artifactId>mysql-connector-java</artifactId>
+	        <version>5.1.18</version>
+	    </dependency>
+    
+    	<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-	<dependency>
-		<groupId>org.testng</groupId>
-		<artifactId>testng</artifactId>
-		<version>6.8.8</version>
-	</dependency>
+	</dependencies>	
 	
-    <dependency>
-    	<groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>3.6.9.Final</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-annotations</artifactId>
-        <version>3.5.6-Final</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>3.1.0.GA</version>
-    </dependency>        
-    
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-tools</artifactId>
-        <version>3.2.4.GA</version>
-    </dependency>        
-    
-    <dependency>
-        <groupId>javassist</groupId>
-        <artifactId>javassist</artifactId>
-        <version>3.12.1.GA</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.18</version>
-    </dependency>
-  </dependencies>
 </project>
